# gridguard

./: .gitignore  AUTHENTICITY.md  CERTIFICATE.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  PROVENANCE.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
benchmark/: run_scenarios.py
docs/reviewer-notes/: command-policy-20260630-184712.md  outage-safety-20260630-184712.md
examples/: iesco-f7.json  sample-schedule.csv
src/gridguard/: __init__.py  __main__.py  cli.py  config.py  duration.py  exit_codes.py  grid.py  history.py  importers.py  runner.py  schedule.py
src/gridguard/dashboard/: __init__.py  app.py
src/gridguard/dashboard/templates/: index.html
tests/: __init__.py  conftest.py  test_cli.py  test_cli_errors.py  test_dashboard.py  test_duration.py  test_exit_codes.py  test_grid.py  test_history.py  test_hours_window.py  test_importers.py  test_runner.py  test_schedule.py
