[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gridguard"
version = "1.0.0"
description = "A grid-aware command guard: refuses to start long commands that a load-shedding cut would kill mid-run (exit code 87)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Mughirah Nasir", email = "mnasir.bee25seecs@seecs.edu.pk" },
]
keywords = ["load-shedding", "power", "cli", "scheduler", "pakistan", "devtools"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "tzdata; platform_system == 'Windows'",
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dashboard = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.5", "build>=1.0"]

[project.scripts]
gridguard = "gridguard.cli:main"

[project.urls]
Homepage = "https://github.com/Mughirah-Nasir/gridguard"
Issues = "https://github.com/Mughirah-Nasir/gridguard/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/gridguard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
